[tool.poetry]
name = "ogloszenia budowlane"
version = "0.1.0"
description = ""
authors = ["mogiel <mogielski@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.81.0"
uvicorn = "^0.18.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
